# models/pedidosProductos.models.js
@@ -1,0 +1,8 @@
+module.exports= (sequelize, DataTypes)=>{
+    return sequelize.define('pedidosProductos' , {
+     cantidad:{
+            type: DataTypes.INTEGER,
+            allowNull: false
+        }    
+    });
+}
